[package]
name = "cfn-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.3.2"
clap = { version = "4.5.26", features = ["derive"] }
nom = "7.1.3"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
